--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -329,7 +329,7 @@ block content
                               angle-top-right-radius="80"
                               angle-bottom-left-radius="200"
                               angle-bottom-right-slice="300,200"
-                              rounding="bottom"
+                              rounding="top,bottom"
                               edge="top,right,left,bottom,angle-top-left,angle-top-right,angle-bottom-left,angle-bottom-right"
                           )
         +b.FOOTER.footer
