--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -238,7 +238,7 @@ block content
                           +e.row
                               +e.col
                                   +b.field
-                                      label Тип кромки:
+                                      label Тип кромки <span data-help="В прайс листе указан номинальный размер изделия с учетом технологических припусков. Для того, чтобы получить изделие с точностью до 1 мм, необходимо заказать услугу «Деталировка».">?</span> :
                                       +b.LABEL.select
                                           select
                                               option ПВХ / ABS
