--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -761,7 +761,32 @@ section,
  .field label:not(.select) {
   height: 13px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+ }
+ &__line {
+  position: relative;
+  text-align: center;
+  color: #b73236;
+  font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: nowrap;
+  margin: 30px 0;
+
+  &:before,
+  &:after {
+   content: "";
+   width: 100%;
+   height: 1px;
+   display: block;
+   background: #b73236;
+  }
+
+  h5 {
+   font-weight: 500;
+   margin: 0 15px;
+  }
  }
 }
 
@@ -948,6 +973,46 @@ section,
     left: 0;
     bottom: 0;
    }
+  }
+ }
+}
+
+[data-help] {
+ background: #5f5f5f;
+ width: 16px;
+ height: 16px;
+ font-weight: 700;
+ font-size: 11px;
+ font-family: Arial;
+ color: #fff;
+ text-align: center;
+ border-radius: 50%;
+ margin-left: 5px;
+ vertical-align: middle;
+ cursor: pointer;
+ position: relative;
+ display: inline-flex;
+ align-items: center;
+ justify-content: center;
+ .tooltip-help {
+  min-width: 250px;
+  background: #fff;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 2;
+  color: #000;
+  padding: 15px;
+  font-weight: 400;
+  text-align: left;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  line-height: 1.5;
+  font-family: Ubuntu;
+  display: none;
+ }
+ &:hover {
+  .tooltip-help {
+   display: block;
   }
  }
 }
