--- a/src/assets/scss/modules/loader.scss
+++ b/src/assets/scss/modules/loader.scss
@@ -2,27 +2,27 @@ $size: 90px;
 $speed: 4s;
 
 .loader {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    background: #fff;
-    z-index: 9999;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all 1.2s ease;
+ width: 100%;
+ height: 100%;
+ position: fixed;
+ top: 0;
+ left: 0;
+ right: 0;
+ background: #fff;
+ z-index: 9999;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ transition: all 1.2s ease;
+ pointer-events: none;
+ svg {
+  width: 70px;
+ }
 
-    svg {
-        width: 70px;
-    }
-
-    &.hide {
-        opacity: 0;
-        visibility: hidden;
-    }
+ &.hide {
+  opacity: 0;
+  visibility: hidden;
+ }
 }
 
 $green: $success-color;
@@ -34,81 +34,79 @@ $white: $gray-light;
 // scaling... any units
 $width: 100px;
 
-
 .circular {
-    animation: rotate 2s linear infinite;
-    height: 100%;
-    transform-origin: center center;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+ animation: rotate 2s linear infinite;
+ height: 100%;
+ transform-origin: center center;
+ width: 100%;
+ position: absolute;
+ top: 0;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ margin: auto;
 }
 
 .path {
-    stroke-dasharray: 1, 200;
-    stroke-dashoffset: 0;
-    animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
-    stroke-linecap: round;
+ stroke-dasharray: 1, 200;
+ stroke-dashoffset: 0;
+ animation: dash 1.5s ease-in-out infinite, color 6s ease-in-out infinite;
+ stroke-linecap: round;
 }
 
 @keyframes rotate {
-    100% {
-        transform: rotate(360deg);
-    }
+ 100% {
+  transform: rotate(360deg);
+ }
 }
 
 @keyframes dash {
-    0% {
-        stroke-dasharray: 1, 200;
-        stroke-dashoffset: 0;
-    }
+ 0% {
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+ }
 
-    50% {
-        stroke-dasharray: 89, 200;
-        stroke-dashoffset: -35px;
-    }
+ 50% {
+  stroke-dasharray: 89, 200;
+  stroke-dashoffset: -35px;
+ }
 
-    100% {
-        stroke-dasharray: 89, 200;
-        stroke-dashoffset: -124px;
-    }
+ 100% {
+  stroke-dasharray: 89, 200;
+  stroke-dashoffset: -124px;
+ }
 }
 
 @keyframes color {
+ 100%,
+ 0% {
+  stroke: $blue;
+ }
 
-    100%,
-    0% {
-        stroke: $blue;
-    }
+ 40% {
+  stroke: $yellow;
+ }
 
-    40% {
-        stroke: $yellow;
-    }
+ 66% {
+  stroke: $green;
+ }
 
-    66% {
-        stroke: $green;
-    }
-
-    80%,
-    90% {
-        stroke: $red;
-    }
+ 80%,
+ 90% {
+  stroke: $red;
+ }
 }
 
 // demo-specific
 body {
-    background-color: $white;
+ background-color: $white;
 }
 
 .showbox {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 5%;
+ position: absolute;
+ top: 0;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ padding: 5%;
 }
